2009-09-24  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/41459
	* error.c(gfc_warning_now): Move warnings_are_errors test to 
	after actual emitting of the warning.
	* parse.c (next_free): Improve error locus printing.
	(next_fixed): Change gfc_warn to gfc_warning_now, and improve
	locus reporting.
 

2009-09-16  Michael Matz  <matz@suse.de>

	PR fortran/41212
	* trans.h (struct lang_type): Remove nontarget_type member.
	* trans.c (gfc_add_modify): Don't access it.
	* trans-decl.c (gfc_finish_var_decl): Don't allocate and set it,
	instead set DECL_RESTRICTED_P on affected decls.

2009-09-14  Richard Henderson  <rth@redhat.com>

	* f95-lang.c (gfc_init_builtin_functions): Update call to
	build_common_builtin_nodes.
	(gfc_maybe_initialize_eh): Don't call
	default_init_unwind_resume_libfunc.

2009-09-13  Richard Guenther  <rguenther@suse.de>
	Rafael Avila de Espindola  <espindola@google.com>

	* f95-lang.c (gfc_maybe_initialize_eh): Do not init
	eh_personality_libfunc.

2009-09-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41242
	* resolve.c (resolve_ordinary_assign): Don't call resolve_code,
	to avoid that subsequent codes are resolved more than once.
	(resolve_code): Make sure that type-bound assignment operators are
	resolved correctly.


2009-09-10  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/31292
	* fortran/decl.c(gfc_match_modproc): Check that module procedures
	from a module can USEd in module procedure statements in other
	program units.  Update locus for better error message display.
	Detect intrinsic procedures in module procedure statements.

2009-09-09  Richard Guenther  <rguenther@suse.de>

	PR fortran/41297
	* trans-expr.c (gfc_trans_scalar_assign): Correct typo that
	left 'tmp' unused in derived type assignment.

2009-09-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/41197
	* resolve_c (resolve_allocate_deallocate):  Complain
	if stat or errmsg varaible is an array.

2009-09-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/41258